History of this buildout
========================

NOTE: This is now a maintenance branch as long as Minaraad is still
hosted by Zest.  Trunk (4.x) will be used in Belgium on the LNE
servers, using RelStorage.  Any changes done in this maintenance
branch must be ported to trunk as well.


3.34 (2011-12-07)
-----------------

- Make Digibib an orderable folder.
  [maurits]

- Always exclude the project and meeting containers from navigation.
  [maurits]

- Edit the portal types xml to have the View action just point to the
  object url instead of base_view or similar.
  [maurits]

- Do not show th subscribe or unsubscribe option directly after
  someone has subscribed.  This seems to confuse people.
  [maurits]

- Show link to Digibib DashBoard in meetings, projects, and lists of
  meetings, projects and organizations.
  [maurits]


3.33 (2011-12-02)
-----------------

- Fixed inconsistency in list of projects of other years, as we sorted
  by advisory date and grouped by the year of the deadline, which
  could lead to double entries in the year drop down.  We now group by
  the year of the advisory date.
  [maurits]

- Some css fixes in the div.widget.
  [maurits]


3.32 (2011-12-02)
-----------------

- Show a state dropdown instead of a checkbox for changing the state
  of an attachment in a list.
  [maurits]

- Sanitized the file_attachment_workflow.  Added upgrade step.
  [maurits]


3.31 (2011-11-29)
-----------------

- Rotate the minaraad_email.log and make sure this then gets reopened
  properly.
  [maurits]

- Introduce SERVER setting in scripts/passwords.py for the projects
  reminder cron job.  With this, e-mails will have a proper link
  instead of pointing to localhost:8080.
  [maurits]


3.30 (2011-11-28)
-----------------

- Added @@is_attending that return True when the current logged-in
  user has registered as attendee for the context.  Context should be
  an MREvent or Hearing, but we kindly return False otherwise; also